# serializer version: 1
# name: TestFinalize.test_conflict
  dict({
    'id': 'conflict',
    'message': 'Subtraction has already been finalized',
  })
# ---
# name: TestFinalize.test_not_found
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
# name: TestFinalize.test_success
  dict({
    'count': 100,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'test.fq.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.319,
      'c': 0.18,
      'g': 0.18,
      'n': 0.002,
      't': 0.319,
    }),
    'id': 1,
    'job': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'upload': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'name': 'test.fq.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 723988,
      'type': 'subtraction',
      'uploaded_at': 'approximately_now_isoformat',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: TestUploadSubtractionFileAsJob.test_create
  dict({
    'download_url': '/subtractions/1/files/subtraction.1.bt2',
    'id': 1,
    'name': 'subtraction.1.bt2',
    'size': 1,
    'subtraction': 1,
    'type': 'bowtie2',
  })
# ---
# name: test_create[resp]
  dict({
    'count': None,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'test.fq.gz',
    }),
    'files': list([
    ]),
    'gc': None,
    'id': 1,
    'job': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'zclark',
        'id': 2,
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'Calamus',
    'nickname': 'Rim Palm',
    'ready': False,
    'upload': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'name': 'test.fq.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 723988,
      'type': 'subtraction',
      'uploaded_at': 'approximately_now_isoformat',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'user': dict({
      'handle': 'zclark',
      'id': 2,
    }),
  })
# ---
# name: test_edit[data0]
  dict({
    'count': 1,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'test.fq.gz',
    }),
    'files': list([
      dict({
        'download_url': '/subtractions/1/files/subtraction.1.bt2',
        'id': 1,
        'name': 'subtraction.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.2.bt2',
        'id': 2,
        'name': 'subtraction.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.3.bt2',
        'id': 3,
        'name': 'subtraction.3.bt2',
        'size': 3257,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.4.bt2',
        'id': 4,
        'name': 'subtraction.4.bt2',
        'size': 29870386,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.fa.gz',
        'id': 5,
        'name': 'subtraction.fa.gz',
        'size': 36461731,
        'subtraction': 1,
        'type': 'fasta',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.rev.1.bt2',
        'id': 6,
        'name': 'subtraction.rev.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.rev.2.bt2',
        'id': 7,
        'name': 'subtraction.rev.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': 1,
    'job': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
      dict({
        'id': 1,
        'name': 'Result',
      }),
      dict({
        'id': 2,
        'name': 'Include',
      }),
    ]),
    'name': 'Bar',
    'nickname': 'bar',
    'ready': True,
    'upload': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'name': 'test.fq.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 723988,
      'type': 'subtraction',
      'uploaded_at': 'approximately_now_isoformat',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_edit[data1]
  dict({
    'count': 1,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'test.fq.gz',
    }),
    'files': list([
      dict({
        'download_url': '/subtractions/1/files/subtraction.1.bt2',
        'id': 1,
        'name': 'subtraction.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.2.bt2',
        'id': 2,
        'name': 'subtraction.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.3.bt2',
        'id': 3,
        'name': 'subtraction.3.bt2',
        'size': 3257,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.4.bt2',
        'id': 4,
        'name': 'subtraction.4.bt2',
        'size': 29870386,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.fa.gz',
        'id': 5,
        'name': 'subtraction.fa.gz',
        'size': 36461731,
        'subtraction': 1,
        'type': 'fasta',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.rev.1.bt2',
        'id': 6,
        'name': 'subtraction.rev.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.rev.2.bt2',
        'id': 7,
        'name': 'subtraction.rev.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': 1,
    'job': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
      dict({
        'id': 1,
        'name': 'Result',
      }),
      dict({
        'id': 2,
        'name': 'Include',
      }),
    ]),
    'name': 'foo',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'upload': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'name': 'test.fq.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 723988,
      'type': 'subtraction',
      'uploaded_at': 'approximately_now_isoformat',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_edit[data2]
  dict({
    'count': 1,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'test.fq.gz',
    }),
    'files': list([
      dict({
        'download_url': '/subtractions/1/files/subtraction.1.bt2',
        'id': 1,
        'name': 'subtraction.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.2.bt2',
        'id': 2,
        'name': 'subtraction.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.3.bt2',
        'id': 3,
        'name': 'subtraction.3.bt2',
        'size': 3257,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.4.bt2',
        'id': 4,
        'name': 'subtraction.4.bt2',
        'size': 29870386,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.fa.gz',
        'id': 5,
        'name': 'subtraction.fa.gz',
        'size': 36461731,
        'subtraction': 1,
        'type': 'fasta',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.rev.1.bt2',
        'id': 6,
        'name': 'subtraction.rev.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.rev.2.bt2',
        'id': 7,
        'name': 'subtraction.rev.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': 1,
    'job': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
      dict({
        'id': 1,
        'name': 'Result',
      }),
      dict({
        'id': 2,
        'name': 'Include',
      }),
    ]),
    'name': 'foo',
    'nickname': '',
    'ready': True,
    'upload': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'name': 'test.fq.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 723988,
      'type': 'subtraction',
      'uploaded_at': 'approximately_now_isoformat',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_edit[data3]
  dict({
    'count': 1,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'test.fq.gz',
    }),
    'files': list([
      dict({
        'download_url': '/subtractions/1/files/subtraction.1.bt2',
        'id': 1,
        'name': 'subtraction.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.2.bt2',
        'id': 2,
        'name': 'subtraction.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.3.bt2',
        'id': 3,
        'name': 'subtraction.3.bt2',
        'size': 3257,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.4.bt2',
        'id': 4,
        'name': 'subtraction.4.bt2',
        'size': 29870386,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.fa.gz',
        'id': 5,
        'name': 'subtraction.fa.gz',
        'size': 36461731,
        'subtraction': 1,
        'type': 'fasta',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.rev.1.bt2',
        'id': 6,
        'name': 'subtraction.rev.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.rev.2.bt2',
        'id': 7,
        'name': 'subtraction.rev.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': 1,
    'job': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
      dict({
        'id': 1,
        'name': 'Result',
      }),
      dict({
        'id': 2,
        'name': 'Include',
      }),
    ]),
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'upload': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'name': 'test.fq.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 723988,
      'type': 'subtraction',
      'uploaded_at': 'approximately_now_isoformat',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_find[2-1]
  dict({
    'documents': list([
      dict({
        'count': 1,
        'created_at': 'approximately_now_isoformat',
        'file': dict({
          'id': 1,
          'name': 'test.fq.gz',
        }),
        'id': 1,
        'job': dict({
          'created_at': 'approximately_now_isoformat',
          'id': 1,
          'progress': 0,
          'state': 'pending',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'create_subtraction',
        }),
        'name': 'foo',
        'nickname': 'bar',
        'ready': True,
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
      dict({
        'count': 1,
        'created_at': 'approximately_now_isoformat',
        'file': dict({
          'id': 1,
          'name': 'test.fq.gz',
        }),
        'id': 2,
        'job': dict({
          'created_at': 'approximately_now_isoformat',
          'id': 2,
          'progress': 0,
          'state': 'pending',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'create_subtraction',
        }),
        'name': 'foo',
        'nickname': 'bar',
        'ready': True,
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
    ]),
    'found_count': 5,
    'page': 1,
    'page_count': 3,
    'per_page': 2,
    'ready_count': 5,
    'total_count': 5,
  })
# ---
# name: test_find[2-2]
  dict({
    'documents': list([
      dict({
        'count': 1,
        'created_at': 'approximately_now_isoformat',
        'file': dict({
          'id': 1,
          'name': 'test.fq.gz',
        }),
        'id': 3,
        'job': dict({
          'created_at': 'approximately_now_isoformat',
          'id': 3,
          'progress': 0,
          'state': 'pending',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'create_subtraction',
        }),
        'name': 'foo',
        'nickname': 'bar',
        'ready': True,
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
      dict({
        'count': 1,
        'created_at': 'approximately_now_isoformat',
        'file': dict({
          'id': 1,
          'name': 'test.fq.gz',
        }),
        'id': 4,
        'job': dict({
          'created_at': 'approximately_now_isoformat',
          'id': 4,
          'progress': 0,
          'state': 'pending',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'create_subtraction',
        }),
        'name': 'foo',
        'nickname': 'bar',
        'ready': True,
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
    ]),
    'found_count': 5,
    'page': 2,
    'page_count': 3,
    'per_page': 2,
    'ready_count': 5,
    'total_count': 5,
  })
# ---
# name: test_find[None-None]
  dict({
    'documents': list([
      dict({
        'count': 1,
        'created_at': 'approximately_now_isoformat',
        'file': dict({
          'id': 1,
          'name': 'test.fq.gz',
        }),
        'id': 1,
        'job': dict({
          'created_at': 'approximately_now_isoformat',
          'id': 1,
          'progress': 0,
          'state': 'pending',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'create_subtraction',
        }),
        'name': 'foo',
        'nickname': 'bar',
        'ready': True,
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
      dict({
        'count': 1,
        'created_at': 'approximately_now_isoformat',
        'file': dict({
          'id': 1,
          'name': 'test.fq.gz',
        }),
        'id': 2,
        'job': dict({
          'created_at': 'approximately_now_isoformat',
          'id': 2,
          'progress': 0,
          'state': 'pending',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'create_subtraction',
        }),
        'name': 'foo',
        'nickname': 'bar',
        'ready': True,
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
      dict({
        'count': 1,
        'created_at': 'approximately_now_isoformat',
        'file': dict({
          'id': 1,
          'name': 'test.fq.gz',
        }),
        'id': 3,
        'job': dict({
          'created_at': 'approximately_now_isoformat',
          'id': 3,
          'progress': 0,
          'state': 'pending',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'create_subtraction',
        }),
        'name': 'foo',
        'nickname': 'bar',
        'ready': True,
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
      dict({
        'count': 1,
        'created_at': 'approximately_now_isoformat',
        'file': dict({
          'id': 1,
          'name': 'test.fq.gz',
        }),
        'id': 4,
        'job': dict({
          'created_at': 'approximately_now_isoformat',
          'id': 4,
          'progress': 0,
          'state': 'pending',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'create_subtraction',
        }),
        'name': 'foo',
        'nickname': 'bar',
        'ready': True,
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
      dict({
        'count': 1,
        'created_at': 'approximately_now_isoformat',
        'file': dict({
          'id': 1,
          'name': 'test.fq.gz',
        }),
        'id': 5,
        'job': dict({
          'created_at': 'approximately_now_isoformat',
          'id': 5,
          'progress': 0,
          'state': 'pending',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'create_subtraction',
        }),
        'name': 'foo',
        'nickname': 'bar',
        'ready': True,
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
    ]),
    'found_count': 5,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'ready_count': 5,
    'total_count': 5,
  })
# ---
# name: test_find_empty_subtractions
  dict({
    'documents': list([
    ]),
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'ready_count': 0,
    'total_count': 0,
  })
# ---
# name: test_get
  dict({
    'count': 1,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'test.fq.gz',
    }),
    'files': list([
      dict({
        'download_url': '/subtractions/1/files/subtraction.1.bt2',
        'id': 1,
        'name': 'subtraction.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.2.bt2',
        'id': 2,
        'name': 'subtraction.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.3.bt2',
        'id': 3,
        'name': 'subtraction.3.bt2',
        'size': 3257,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.4.bt2',
        'id': 4,
        'name': 'subtraction.4.bt2',
        'size': 29870386,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.fa.gz',
        'id': 5,
        'name': 'subtraction.fa.gz',
        'size': 36461731,
        'subtraction': 1,
        'type': 'fasta',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.rev.1.bt2',
        'id': 6,
        'name': 'subtraction.rev.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.rev.2.bt2',
        'id': 7,
        'name': 'subtraction.rev.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': 1,
    'job': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'upload': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'name': 'test.fq.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 723988,
      'type': 'subtraction',
      'uploaded_at': 'approximately_now_isoformat',
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
    }),
    'user': dict({
      'handle': 'myersmitchell',
      'id': 2,
    }),
  })
# ---
# name: test_get_from_job
  dict({
    'count': 1,
    'created_at': 'approximately_now_isoformat',
    'file': dict({
      'id': 1,
      'name': 'test.fq.gz',
    }),
    'files': list([
      dict({
        'download_url': '/subtractions/1/files/subtraction.1.bt2',
        'id': 1,
        'name': 'subtraction.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.2.bt2',
        'id': 2,
        'name': 'subtraction.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.3.bt2',
        'id': 3,
        'name': 'subtraction.3.bt2',
        'size': 3257,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.4.bt2',
        'id': 4,
        'name': 'subtraction.4.bt2',
        'size': 29870386,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.fa.gz',
        'id': 5,
        'name': 'subtraction.fa.gz',
        'size': 36461731,
        'subtraction': 1,
        'type': 'fasta',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.rev.1.bt2',
        'id': 6,
        'name': 'subtraction.rev.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/1/files/subtraction.rev.2.bt2',
        'id': 7,
        'name': 'subtraction.rev.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': 1,
    'job': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 2,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'leeashley',
        'id': 2,
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'upload': dict({
      'created_at': 'approximately_now_isoformat',
      'id': 1,
      'name': 'test.fq.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 723988,
      'type': 'subtraction',
      'uploaded_at': 'approximately_now_isoformat',
      'user': dict({
        'handle': 'leeashley',
        'id': 2,
      }),
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 2,
    }),
  })
# ---
